--- a/src/app/shared/components/sensors-list-form/sensors-list-form.component.html
+++ b/src/app/shared/components/sensors-list-form/sensors-list-form.component.html
@@ -23,8 +23,8 @@
 
 <button type="button" class="btn btn-primary w-100"
         *ngIf="sensorsGroup.length"
-        (click)="onCreateGroup()">
-  Create group
+        (click)="onCreate()">
+  Create chat
 </button>
 
 
